syntax = "proto3";
option csharp_namespace = "Grpc";
package product;

service Product {
  rpc GetProductDetails (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int32 productId = 1;
}

message ProductResponse {
  string productDetails = 1;
}
